--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "boko-tutorial",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@ashthornton/asscroll": "^2.0.7",
     "events": "^3.3.0",
-    "gsap": "^3.10.4",
-    "lil-gui": "^0.16.1",
-    "three": "^0.141.0",
-    "vite": "^3.1.0"
+    "three": "^0.146.0",
+    "vite": "^3.2.0"
+  },
+  "dependencies": {
+    "verbose": "^0.2.3"
   }
 }
